# wd14-tagger

./: .gitignore  README.md  main.py  pyproject.toml
src/converter/: xmp_writer.py
src/tagger/: inference.py
tests/: test_tagger.py
